# Windows-remote

./: README.md
windows-remote-main/client/: package.json  pnpm-lock.yaml
windows-remote-main/client/src/: App.css  App.tsx  index.tsx
windows-remote-main/client/src-tauri/: Cargo.toml  tauri.conf.json
windows-remote-main/client/src-tauri/src/: commands.rs
windows-remote-main/client/src/common/: Constans.ts  Handler.ts  InputEvent.ts
windows-remote-main/server/: Cargo.toml
windows-remote-main/server/src/: main.rs  remote_server.rs  remote_session.rs
