[package]
name = "client"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["api-all", "devtools"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

rand = "0.8.5"
uuid = { version = "1.3.0", features = ["serde", "v4"] }
enigo = "0.0.14"
lazy_static = "1.4.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
